--- a/public/404.html
+++ b/public/404.html
@@ -13,8 +13,7 @@
   
   
   
-  <meta name="description" content="Assistant Professor of Political Science
-Core Faculty in the Center for Statistics and the Social Sciences">
+  <meta name="description" content="Assistant Professor of Political Science">
 
   
   <link rel="alternate" hreflang="en-us" href="">
@@ -76,8 +75,7 @@ Core Faculty in the Center for Statistics and the Social Sciences">
   <meta property="og:site_name" content="Jeffrey B. Arnold">
   <meta property="og:url" content="">
   <meta property="og:title" content="404 Page not found | Jeffrey B. Arnold">
-  <meta property="og:description" content="Assistant Professor of Political Science
-Core Faculty in the Center for Statistics and the Social Sciences">
+  <meta property="og:description" content="Assistant Professor of Political Science">
   <meta property="og:locale" content="en-us">
   
   
